--- a/package.json
+++ b/package.json
@@ -5,5 +5,14 @@
   "main": "index.js",
   "repository": "git@github.com:njfamirm/12fy.git",
   "author": "S. Amir Mohammad Najafi <njfamirm@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "s": "yarn start",
+    "b": "yarn build",
+    "start": "eleventy --serve",
+    "build": "eleventy"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^2.0.1"
+  }
 }
