--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
   "license": "MIT",
   "scripts": {
     "s": "yarn start",
+    "w": "yarn start",
     "b": "yarn build",
+    "c": "yarn clean",
+    "cb": "run-s clean build",
     "start": "eleventy --serve",
+    "watch": "yarn start",
+    "clean": "rm -rf dist",
     "build": "eleventy"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.1.1"
