--- a/cloud/compose.yml
+++ b/cloud/compose.yml
@@ -30,6 +30,6 @@ services:
     labels:
       traefik.enable: true
       traefik.port: 80
-      traefik.frontend.rule: Host:${DOMAIN}; PathPrefix:/
+      traefik.frontend.rule: Host:${DOMAIN};
       traefik.frontend.entryPoints: http, https
       traefik.frontend.redirect.entryPoint: https
