fix(workflow): publish container on push main

--- a/.github/workflows/publish-alwatr-container.yml
+++ b/.github/workflows/publish-alwatr-container.yml
@@ -5,6 +5,10 @@ name: Publish Alwatr Containers
 on:
   workflow_dispatch:
 
+  push:
+    branch:
+      - main
+
   pull_request:
     paths:
       - 'cloud/Dockerfile'
