--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^9.1.1"
+    "postcss-preset-env": "^9.1.1",
+    "tailwindcss": "^3.3.3"
   }
 }
