--- a/cloud/env/12fy-ws-beta.env
+++ b/cloud/env/12fy-ws-beta.env
@@ -1,3 +1,6 @@
+deployHost='mci1.alwatr.ir'
+deployPath='/srv/12fy-beta'
+
 DOMAIN='beta.12fy.alwatr.ir'
 WEBSITE_IMAGE='ghcr.io/njfamirm/v2fly'
 WEBSITE_ACCESS_LOG='/var/log/nginx/access.log json'
