--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@11ty/eleventy": "^2.0.1",
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
+    "esbuild": "^0.19.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
