--- a/cloud/env/12fy-ws.env
+++ b/cloud/env/12fy-ws.env
@@ -2,5 +2,5 @@ deployHost='mci1.alwatr.ir'
 deployPath='/srv/12fy'
 
 DOMAIN='12fy.alwatr.ir'
-WEBSITE_IMAGE='ghcr.io/njfamirm/v2fly'
+WEBSITE_IMAGE='ghcr.io/njfamirm/12fy'
 WEBSITE_ACCESS_LOG='/var/log/nginx/access.log json'
