chore(workflow): rename published image

--- a/.github/workflows/publish-alwatr-container.yml
+++ b/.github/workflows/publish-alwatr-container.yml
@@ -29,12 +29,12 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - image: 12fy
+          - image: 12fy-ws
             description: Alwatr 12fy website.
             siteUrl: https://12fy.alwatr.ir
             noIndex: 1
 
-          - image: 12fy-beta
+          - image: 12fy-beta-ws
             description: Alwatr 12fy beta website.
             siteUrl: https://beta.12fy.alwatr.ir
 
