--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "editor.defaultFormatter": "okitavera.vscode-nunjucks-formatter"
   },
   "cSpell.words": [
-    "cssnano"
+    "cssnano",
+    "tailwindcss"
   ]
 }
