--- a/cloud/env/12fy-ws-beta.env
+++ b/cloud/env/12fy-ws-beta.env
@@ -2,5 +2,5 @@ deployHost='mci1.alwatr.ir'
 deployPath='/srv/12fy-beta'
 
 DOMAIN='beta.12fy.alwatr.ir'
-WEBSITE_IMAGE='ghcr.io/njfamirm/12fy-beta'
+WEBSITE_IMAGE='ghcr.io/njfamirm/12fy-ws-beta:main'
 WEBSITE_ACCESS_LOG='/var/log/nginx/access.log json'
