--- a/.github/workflows/publish-alwatr-container.yml
+++ b/.github/workflows/publish-alwatr-container.yml
@@ -89,8 +89,8 @@ jobs:
           context: .
           file: cloud/Dockerfile
           build-args: |
-            siteUrl: ${{ matrix.siteUrl }}
-            noIndex: ${{ matrix.noIndex }}
+            siteUrl=${{ matrix.siteUrl }}
+            noIndex=${{ matrix.noIndex }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
