refactor: use env

--- a/cloud/Dockerfile
+++ b/cloud/Dockerfile
@@ -10,6 +10,8 @@ WORKDIR /app
 
 ENV NODE_ENV production
 ENV MY_ENVIRONMENT production
+ENV siteUrl $siteUrl
+ENV noIndex $noIndex
 
 COPY package.json *.lock ./
 RUN if [ -f *.lock ]; then \
@@ -20,7 +22,7 @@ RUN if [ -f *.lock ]; then \
 
 COPY . .
 
-RUN siteUrl=$siteUrl noIndex=$noIndex yarn build
+RUN yarn build
 
 # ---
 
