--- a/cloud/Dockerfile
+++ b/cloud/Dockerfile
@@ -13,6 +13,8 @@ ENV MY_ENVIRONMENT production
 ENV siteUrl $siteUrl
 ENV noIndex $noIndex
 
+RUN apk add --no-cache git
+
 COPY package.json *.lock ./
 RUN if [ -f *.lock ]; then \
       yarn install --frozen-lockfile --non-interactive --production false; \
