--- a/.github/workflows/publish-alwatr-container.yml
+++ b/.github/workflows/publish-alwatr-container.yml
@@ -32,14 +32,14 @@ jobs:
           - image: 12fy-ws
             description: Alwatr 12fy website.
             siteUrl: https://12fy.alwatr.ir
-            # NGINX_FORCE_DOMAIN: https://12fy.alwatr.ir
+            # NGINX_FORCE_DOMAIN: 12fy.alwatr.ir
             # NGINX_FORCE_DOMAIN_STATUS: 302
             noIndex: 1
 
           - image: 12fy-ws-beta
             description: Alwatr 12fy beta website.
             siteUrl: https://beta.12fy.alwatr.ir
-            # NGINX_FORCE_DOMAIN: https://beta.12fy.alwatr.ir
+            # NGINX_FORCE_DOMAIN: beta.12fy.alwatr.ir
             # NGINX_FORCE_DOMAIN_STATUS: 302
             noIndex: 1
 
