--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "author": "S. Amir Mohammad Najafi <njfamirm@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "f": "yarn format",
     "s": "yarn start",
     "w": "yarn start",
     "b": "yarn build",
     "c": "yarn clean",
     "cb": "run-s clean build",
+    "format": "run-s format:*",
+    "format:prettier": "prettier . --ignore-path .gitignore --write",
     "start": "eleventy --serve",
     "watch": "yarn start",
     "clean": "rm -rf dist",
@@ -26,6 +29,7 @@
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.1.1",
+    "prettier": "^3.0.2",
     "tailwindcss": "^3.3.3"
   }
 }
