--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "postcss-preset-env": "^9.1.3",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "packageManager": "yarn@3.6.3"
 }
