feat: upgrade yarn.lock

--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,11 @@ dist
 node_modules
 package-lock.json
 
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# other
-temp
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
