--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "author": "S. Amir Mohammad Najafi <njfamirm@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "f": "yarn format",
+        "f": "yarn format",
     "s": "yarn start",
     "w": "yarn start",
     "b": "yarn build",
-    "c": "yarn clean",
+        "c": "yarn clean",
     "cb": "run-s clean build",
     "format": "run-s format:*",
     "format:prettier": "prettier . --ignore-path .gitignore --write",
@@ -23,10 +23,13 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.5",
+    "@11ty/eleventy-img": "^3.1.0",
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
+    "eleventy-plugin-time-to-read": "^1.3.0",
     "esbuild": "^0.19.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.29",
