--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "@alwatr/style": "^1.1.1",
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
     "eleventy-plugin-time-to-read": "^1.3.0",
