--- a/.github/workflows/publish-alwatr-container.yml
+++ b/.github/workflows/publish-alwatr-container.yml
@@ -29,17 +29,16 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - image: 12fy-ws
-            description: Alwatr 12fy website.
-            siteUrl: https://12fy.alwatr.ir
-            # NGINX_FORCE_DOMAIN: 12fy.alwatr.ir
-            # NGINX_FORCE_DOMAIN_STATUS: 302
-            noIndex: 1
+          - image: alimd-blog
+            description: S. Ali Mihandoost personal blog.
+            siteUrl: https://www.mihandoost.com
+            NGINX_FORCE_DOMAIN: www.mihandoost.com
+            NGINX_FORCE_DOMAIN_STATUS: 302
 
-          - image: 12fy-ws-beta
-            description: Alwatr 12fy beta website.
-            siteUrl: https://beta.12fy.alwatr.ir
-            # NGINX_FORCE_DOMAIN: beta.12fy.alwatr.ir
+          - image: alimd-blog-beta
+            description: S. Ali Mihandoost beta personal blog.
+            siteUrl: https://beta.mihandoost.com
+            # NGINX_FORCE_DOMAIN: beta.mihandoost.com
             # NGINX_FORCE_DOMAIN_STATUS: 302
             noIndex: 1
 
