chore(settings): add alimd to spell check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,10 @@
     "editor.defaultFormatter": "okitavera.vscode-nunjucks-formatter"
   },
   "cSpell.words": [
+    "alimd",
     "cssnano",
-    "tailwindcss",
-    "esbuild"
+    "esbuild",
+    "mihandoost",
+    "tailwindcss"
   ]
 }
