--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@alwatr/style": "^1.1.2",
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
     "esbuild": "^0.19.3",
