--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "git@github.com:njfamirm/12fy.git",
   "author": "S. Amir Mohammad Najafi <njfamirm@gmail.com>",
   "license": "MIT",
+  "browserslist": "> 1.5%, not dead",
   "scripts": {
     "f": "yarn format",
     "s": "yarn start",
@@ -26,7 +27,7 @@
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@alwatr/icon": "^1.1.3",
-    "@alwatr/style": "^1.1.2",
+    "@alwatr/style": "^1.2.0",
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
     "esbuild": "^0.19.3",
@@ -35,6 +36,7 @@
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.1.4",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3"
   },
   "packageManager": "yarn@3.6.3"
