chore(vscode): disable markdownlint MD034 rule

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,11 @@
     "esbuild",
     "mihandoost",
     "tailwindcss"
-  ]
+  ],
+  "cSpell.ignoreRegExpList": [
+    "{% end.*%}"
+  ],
+  "markdownlint.config": {
+    "MD034": false
+  }
 }
