--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
     "eleventy-plugin-time-to-read": "^1.3.0",
+    "eleventy-plugin-toc": "^1.1.5",
     "esbuild": "^0.19.3",
+    "markdown-it-anchor": "^8.6.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.29",
     "postcss-import": "^15.1.0",
