--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eleventy-plugin-toc": "^1.1.5",
     "esbuild": "^0.19.3",
     "markdown-it-anchor": "^8.6.7",
+    "markdown-it-link-attributes": "^4.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.29",
     "postcss-import": "^15.1.0",
