--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.1.3",
     "prettier": "^3.0.3",
+    "string": "^3.3.3",
     "tailwindcss": "^3.3.3"
   },
   "packageManager": "yarn@3.6.3"
