refactor(cloud): move force domain env to env file

--- a/cloud/env/alimd-blog-ws.env
+++ b/cloud/env/alimd-blog-ws.env
@@ -1,6 +1,8 @@
 deployHost='mci2.alwatr.ir'
 deployPath='/srv/alimd-blog'
 
-DOMAIN='www.mihandoost.com,mihandoost.com'
+DOMAIN='www.mihandoost.com,ali.mihandoost.com,mihandoost.com'
+NGINX_FORCE_DOMAIN='ali.mihandoost.com'
+
 WEBSITE_IMAGE='ghcr.io/alimd/alimd-blog:main'
 # WEBSITE_ACCESS_LOG='/var/log/nginx/access.log json'
