--- a/cloud/env/alimd-blog-beta.env
+++ b/cloud/env/alimd-blog-beta.env
@@ -2,5 +2,7 @@ deployHost='mci2.alwatr.ir'
 deployPath='/srv/alimd-blog-beta'
 
 DOMAIN='beta.mihandoost.com'
+# NGINX_FORCE_DOMAIN='beta.mihandoost.com'
+
 WEBSITE_IMAGE='ghcr.io/alimd/alimd-blog-beta:main'
 WEBSITE_ACCESS_LOG='/var/log/nginx/access.log json'
