fix(deploy): docker image tag

--- a/cloud/env/alimd-blog-ws.env
+++ b/cloud/env/alimd-blog-ws.env
@@ -4,5 +4,5 @@ deployPath='/srv/alimd-blog'
 DOMAIN='www.mihandoost.com,ali.mihandoost.com,mihandoost.com'
 NGINX_FORCE_DOMAIN='ali.mihandoost.com'
 
-WEBSITE_IMAGE='ghcr.io/alimd/alimd-blog:main'
+WEBSITE_IMAGE='ghcr.io/alimd/alimd-blog:next'
 # WEBSITE_ACCESS_LOG='/var/log/nginx/access.log json'
