--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-directory-output": "^1.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
-    "@alwatr/icon-set-ionic": "^0.1.0",
+    "@alwatr/icon-set-material": "^0.1.1",
     "@alwatr/style": "^1.2.0",
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
