chore(vscode): add cspell regex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.useEditorConfig": true,
   "cSpell.language": "en,fa,fa-IR",
+  "cSpell.ignoreRegExpList": ["{% end.*%}"],
   "emmet.includeLanguages": {
     "nunjucks": "html"
   },
