--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "@swc/html": "^0.0.28",
     "cssnano": "^6.0.1",
     "esbuild": "^0.19.4",
+    "markdown-it": "^13.0.2",
+    "markdown-it-anchor": "^8.6.7",
+    "markdown-it-attrs": "^4.1.6",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
