refactor(cloud): move NGINX_FORCE_DOMAIN to env (#85)

--- a/cloud/compose.yml
+++ b/cloud/compose.yml
@@ -19,6 +19,8 @@ services:
 
     environment:
       - NGINX_ACCESS_LOG=${WEBSITE_ACCESS_LOG:-off}
+      - NGINX_FORCE_DOMAIN=${NGINX_FORCE_DOMAIN:-}
+
 
     logging:
       driver: json-file
