--- a/cloud/env/12fy-ws.env
+++ b/cloud/env/12fy-ws.env
@@ -2,5 +2,7 @@ deployHost='mci2.alwatr.ir'
 deployPath='/srv/12fy'
 
 DOMAIN='12fy.alwatr.ir'
-WEBSITE_IMAGE='ghcr.io/njfamirm/12fy-ws:main'
-WEBSITE_ACCESS_LOG='/var/log/nginx/access.log json'
+# NGINX_FORCE_DOMAIN='12fy.alwatr.ir'
+
+WEBSITE_IMAGE='ghcr.io/njfamirm/12fy-ws:base-main'
+# WEBSITE_ACCESS_LOG='/var/log/nginx/access.log json'
