feat(vscode): update setting from fract

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,19 @@
 {
+  "npm.packageManager": "yarn",
+  "lit-plugin.strict": true,
+  "files.exclude": {
+    "**/*.map": true,
+    "**/*.d.ts": true,
+    "**/*.tsbuildinfo": true
+  },
+  "files.associations": {
+    "*.njk": "html"
+  },
+  "markdownlint.ignore": ["**/CHANGELOG.md"],
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "git.autoStash": true,
+  "git.branchProtection": ["main"],
+  "githubPullRequests.ignoredPullRequestBranches": ["main"],
   "editor.wordWrapColumn": 120,
   "editor.formatOnPaste": false,
   "editor.formatOnSave": false,
@@ -9,8 +24,5 @@
   "prettier.useEditorConfig": true,
   "cSpell.language": "en,fa,fa-IR",
   "cSpell.ignoreRegExpList": ["{% end.*%}"],
-  "emmet.includeLanguages": {
-    "nunjucks": "html"
-  },
   "cSpell.words": ["cssnano", "tailwindcss", "esbuild"]
 }
