feat(lint): add eslint

--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "b": "yarn build",
     "c": "yarn clean",
     "cb": "run-s clean build",
-    "format": "run-s format:prettier",
+    "l": "yarn lint",
+    "lint": "run-s lint:ts",
+    "lint:ts": "eslint . --config .eslintrc.json --ext .ts",
+    "format": "run-s format:prettier format:eslint",
+    "format:eslint": "yarn lint:ts --fix",
     "format:prettier": "prettier . --ignore-path .gitignore --write",
     "start": "eleventy --serve",
     "watch": "yarn start",
@@ -31,8 +35,14 @@
     "@alwatr/icon-set-material": "^0.1.1",
     "@alwatr/style": "^1.2.0",
     "@swc/html": "^0.0.28",
+    "@types/node": "^20.6.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "cssnano": "^6.0.1",
     "esbuild": "^0.19.4",
+    "eslint": "^8.49.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.28.1",
     "markdown-it": "^13.0.2",
     "markdown-it-anchor": "^8.6.7",
     "markdown-it-attrs": "^4.1.6",
@@ -43,6 +53,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
     "tailwindcss": "^3.3.3",
+    "tslib": "^2.6.2",
     "typescript": "^5.2.2"
   },
   "packageManager": "yarn@3.6.3"
